# shop5

./: .gitignore  .summary.md  Cargo.toml  README.md  case1.sh  case2.sh  case3.sh  case4.sh  case5.sh  case6.sh  case7.sh  case8.sh  case9.sh  run.sh  seed.sh  server.sh  shop5-dev.db  shop5.db
_doc/: plan.md  todo.md  v0.1.md  v0.2.md  v0.3.md  v0.4.md  v0.5.md  v0.6.md  v0.7.md  v0.8.md  v1.0.md
src/: db.rs  db.sql  main.rs
src/cli/: cart.rs  category.rs  fmt.rs  mod.rs  order.rs  product.rs  review.rs  user.rs
src/model/: auth.rs  cart.rs  category.rs  mod.rs  order.rs  product.rs  review.rs  stats.rs  user.rs
src/web/: error.rs  middleware.rs  mod.rs
src/web/routes/: auth.rs  cart.rs  category.rs  mod.rs  order.rs  product.rs  review.rs  seller.rs  user.rs
web/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
web/src/: App.tsx
web/src/api/: client.ts
web/src/components/: Layout.tsx
web/src/context/: AuthContext.tsx
web/src/pages/: Cart.tsx  Checkout.tsx  Login.tsx  OrderConfirm.tsx  OrderDetail.tsx  OrderList.tsx  ProductDetail.tsx  ProductEdit.tsx  ProductList.tsx  Register.tsx  Search.tsx  SellerDashboard.tsx  SellerOrders.tsx  SellerProducts.tsx  UserDetail.tsx  UserList.tsx
web/src/types/: index.ts
